--- a/src/views/partials/footer.hbs
+++ b/src/views/partials/footer.hbs
@@ -2,9 +2,13 @@
   <div class="container">
     <footer class="py-3 my-4">
       <ul class="nav justify-content-center border-bottom pb-3 mb-3">
-        <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Пользовательское соглашениеs</a></li>
-        <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Политика конфидициальности</a></li>
-        <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">About</a></li>
+        <li class="nav-item"><a
+            href="https://formadoc.ru/upload/iblock/f03/%D0%9F%D0%BE%D0%BB%D1%8C%D0%B7%D0%BE%D0%B2%D0%B0%D1%82%D0%B5%D0%BB%D1%8C%D1%81%D0%BA%D0%BE%D0%B5%20%D1%81%D0%BE%D0%B3%D0%BB%D0%B0%D1%88%D0%B5%D0%BD%D0%B8%D0%B5%20(%D1%84%D0%BE%D1%80%D0%BC%D0%B0).pdf"
+            class="nav-link px-2 text-muted">
+            Пользовательское соглашение</a></li>
+        <li class="nav-item"><a href="https://kisameev.ru/upload/files/feedback_politics.pdf"
+            class="nav-link px-2 text-muted">
+            Политика конфидициальности</a></li>
       </ul>
       <p class="text-center text-muted">© 2021 Elbrus Wolves, Inc</p>
     </footer>
