--- a/src/views/partials/header.hbs
+++ b/src/views/partials/header.hbs
@@ -3,13 +3,13 @@
 
     <div class="container-fluid">
       <ul class="navbar-nav">
-        <a class="navbar-brand" href="#">
-          <img src="/img/index.png" alt="" width="30" height="30" class="d-inline-block align-text-top">
+        <a class="navbar-brand" href="/">
+          <img src="/img/index.png" alt="" width="30" height="30" class="d-inline-block align-text-top" href="/">
           RED MARKER
         </a>
 
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Главная</a>
+          <a class="nav-link active" aria-current="page" href="/">Главная</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">О нас</a>
