--- a/src/views/partials/header.hbs
+++ b/src/views/partials/header.hbs
@@ -31,7 +31,7 @@
           {{/unless}}
           {{#if userEmail}}
           <li class="nav-item">
-            <a class="nav-link" href="#">ЛK</a>
+            <a class="nav-link" href="/lk">ЛK</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="/logout">Выйти</a>
