--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -1,8 +1,12 @@
-<main style="height: 100%; display: table-row;"  data-allSearch>
-    <div class="title">
-      <h1>выявление правонарушений в сфере защиты персональных
-        данных на интернет-сайтах</h1>
-    </div>
+<main
+  style="height: 100%; display: table-row; background-image: url(https://images.unsplash.com/photo-1519720842496-c64a0d0627f9?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1418&q=80)"
+  data-allSearch>
+
+  <div class="my-5 d-flex justify-content-center">
+    <h1>ВЫЯВЛЕНИЕ ПРАВОНАРУШЕНИЙ <br>
+      В СФЕРЕ ЗАЩИТЫ ПЕРСОНАЛЬНЫХ ДАННЫХ <br>
+      НА ИНТЕРНЕТ-САЙТАХ</h1>
+  </div>
   <form name='urlForm' class="d-flex justify-content-center my-50"
     style="margin-top: 10% !important, flex-direction: column">
     <div class="card text-center" style="width: 50em;">
@@ -13,9 +17,7 @@
         </div>
         <button type="submit" class="btn btn-primary">Проверить</button>
       </div>
-
     </div>
-
   </form>
 
 </main>
