--- a/src/views/sing_in.hbs
+++ b/src/views/sing_in.hbs
@@ -1,15 +1,8 @@
-{{!-- <form id="registrationFrom" action="">
-  <input type="text" name="name" id="name">
-  <input type="text" name="login" id="login">
-  <input type="password" name="password" id="password">
-  <button type="submit">registration</button>
-</form> --}}
-
-<h2 class="my-5 d-flex justify-content-center">Регистрация</h2>
+<h2 class="my-5 d-flex justify-content-center">Вход в личный кабинет</h2>
 <form action="singin" method="POST" class="d-flex justify-content-center" style="margin-top: 1% !important">
   <div class="card text-center col-md-8 offset-md-2" style="width: 50em;">
     <!-- <div class="col-md-8 offset-md-2"></div> -->
-    
+
     <div class="mb-3">
       <label for="exampleInputEmail1" class="form-label">Email address</label>
       <input name="email" type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
