--- a/src/views/about.hbs
+++ b/src/views/about.hbs
@@ -1,16 +1,37 @@
 <main style="height: 100%; display: table-row;">
-  <h2 class="my-5 d-flex justify-content-center">О нас</h2>
+
   <div class="d-flex justify-content-center">
-    <div class="container-fluid row">
-      <div class="col-md-4">
+    <div class="container-fluid row" >
+      <div class="col-lg-1"></div>
+      <div class="col-lg-3">
         <h3 class="my-5 d-flex justify-content-center">Проект</h3>
+        <p class="d-flex justify-content-center">текст текст текст текст текст текст текст текст текст текст
+          текст текст
+          текст
+          текст текст текст текст текст
+          текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст
+          текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст
+        </p>
       </div>
-      <div class="col-md-4">
+      <div class="col-lg-3">
         <h3 class="my-5 d-flex justify-content-center">Создатели</h3>
+        <p class="d-flex justify-content-center">текст текст текст текст текст текст текст текст текст текст текст текст
+          текст
+          текст текст текст текст текст
+          текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст
+          текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст
+        </p>
       </div>
-      <div class="col-md-4">
+      <div class="col-lg-3">
         <h3 class="my-5 d-flex justify-content-center">Сервис</h3>
+        <p class="d-flex justify-content-center">текст текст текст текст текст текст текст текст текст текст текст текст
+          текст
+          текст текст текст текст текст
+          текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст
+          текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст
+        </p>
       </div>
+      <div class="col-lg-1"></div>
     </div>
   </div>
 
