--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -1,11 +1,9 @@
-<main
-  style="height: 100%; display: table-row; background-image: url(https://images.unsplash.com/photo-1519720842496-c64a0d0627f9?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1418&q=80)"
-  data-allSearch>
+<main style="height: 100%; display: table-row;">
 
-  <div class="my-5 d-flex justify-content-center">
-    <h1>ВЫЯВЛЕНИЕ ПРАВОНАРУШЕНИЙ <br>
-      В СФЕРЕ ЗАЩИТЫ ПЕРСОНАЛЬНЫХ ДАННЫХ <br>
-      НА ИНТЕРНЕТ-САЙТАХ</h1>
+  <div class="my-5 ">
+    <h1 class="d-flex justify-content-center">ВЫЯВЛЕНИЕ ПРАВОНАРУШЕНИЙ</h1>
+    <h1 class="d-flex justify-content-center">В СФЕРЕ ЗАЩИТЫ ПЕРСОНАЛЬНЫХ ДАННЫХ</h1>
+    <h1 class="d-flex justify-content-center">НА ИНТЕРНЕТ-САЙТАХ</h1>
   </div>
   <form name='urlForm' class="d-flex justify-content-center my-50"
     style="margin-top: 10% !important, flex-direction: column">
@@ -19,5 +17,6 @@
       </div>
     </div>
   </form>
+  <div data-allSearch class="d-flex justify-content-center my-50"></div>
 
 </main>
