--- a/src/views/about.hbs
+++ b/src/views/about.hbs
@@ -1,11 +1,17 @@
 <main style="height: 100%; display: table-row;">
 
   <div class="d-flex justify-content-center">
-    <div class="container-fluid row" >
+    <div class="container-fluid row d-flex justify-content-center">
       <div class="col-lg-1"></div>
       <div class="col-lg-3">
-        <h3 class="my-5 d-flex justify-content-center">Проект</h3>
+        <h3 class="mb-3 mt-5  d-flex justify-content-center">Проект</h3>
         <p class="d-flex justify-content-center">текст текст текст текст текст текст текст текст текст текст
+          текст текст
+          текст
+          текст текст текст текст текст
+          текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст
+          текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст
+          текст текст текст текст текст текст текст текст текст текст
           текст текст
           текст
           текст текст текст текст текст
@@ -14,8 +20,14 @@
         </p>
       </div>
       <div class="col-lg-3">
-        <h3 class="my-5 d-flex justify-content-center">Создатели</h3>
+        <h3 class="mb-3 mt-5  d-flex justify-content-center">Создатели</h3>
         <p class="d-flex justify-content-center">текст текст текст текст текст текст текст текст текст текст текст текст
+          текст
+          текст текст текст текст текст
+          текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст
+          текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст
+          текст текст текст текст текст текст текст текст текст текст
+          текст текст
           текст
           текст текст текст текст текст
           текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст
@@ -23,8 +35,14 @@
         </p>
       </div>
       <div class="col-lg-3">
-        <h3 class="my-5 d-flex justify-content-center">Сервис</h3>
+        <h3 class="mb-3 mt-5  d-flex justify-content-center">Сервис</h3>
         <p class="d-flex justify-content-center">текст текст текст текст текст текст текст текст текст текст текст текст
+          текст
+          текст текст текст текст текст
+          текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст
+          текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст
+          текст текст текст текст текст текст текст текст текст текст
+          текст текст
           текст
           текст текст текст текст текст
           текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст
