--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -1,4 +1,5 @@
-<main style="height: 100%; display: table-row;">
+<main
+  style="height: 100%; display: table-row; background-image: url(https://catherineasquithgallery.com/uploads/posts/2021-02/1612451649_2-p-serie-soti-fon-3.jpg);">
 
   <div class="my-5 ">
     <h1 class="d-flex justify-content-center">ВЫЯВЛЕНИЕ ПРАВОНАРУШЕНИЙ</h1>
@@ -17,6 +18,7 @@
       </div>
     </div>
   </form>
-  <div data-allSearch class="d-flex justify-content-center my-50"></div>
+  <div data-allSearch></div>
+
 
 </main>
